Added ML Predicted routes

--- a/backend/Congestion.ipynb
+++ b/backend/Congestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f88ef313-8577-4c86-8ff4-d37f289d23b4",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "import joblib\n"
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f06956b-5e70-405a-8145-94df6211e31d",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
     "# Optional: Extract Day/Month/Is_Weekend for feature engineering\n",
     "df['Day'] = df['Date'].dt.day\n",
     "df['Month'] = df['Date'].dt.month\n",
-    "df['Is_Weekend'] = df['Date'].dt.weekday >= 5  # Saturday=5, Sunday=6\n"
+    "df['Is_Weekend'] = df['Date'].dt.weekday >= 5  # Saturday=5, Sunday=6"
    ]
   },
   {
@@ -1429,22 +1429,6 @@
     "\n",
     "print(\"Model and encoders saved successfully!\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce6eba23-c78d-4c36-9e56-e93908fe3349",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57da75ca-38f4-42d8-865e-4a8bfe00633f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
